feat: ✨ 新增分类，调整样式

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
+  "name": "jic-blog",
+  "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
   "devDependencies": {
     "@iconify-json/ant-design": "^1.1.5",
     "@iconify/utils": "^2.1.5",
+    "animate.css": "^4.1.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
